--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.11.3",
     "jade": "^1.11.0",
     "jsonwebtoken": "^5.0.0",
+    "locutus": "^2.0.5",
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
