--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.13.3",
     "express-jwt": "^3.0.0",
     "express-session": "^1.11.3",
+    "form-data": "^1.0.0-rc4",
+    "iconv-lite": "^0.4.13",
     "jade": "^1.11.0",
     "jsonwebtoken": "^5.0.0",
     "locutus": "^2.0.5",
@@ -28,6 +30,7 @@
     "passport": "~0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
+    "request": "^2.73.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
