--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "request": "^2.73.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.0",
