--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "composable-middleware": "^0.3.0",
     "compression": "^1.5.2",
     "connect-mongo": "^0.8.1",
+    "connect-redis": "^3.1.0",
     "cookie-parser": "^1.3.5",
     "cors": "^2.7.1",
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
     "express-jwt": "^3.0.0",
-    "express-session": "^1.11.3",
+    "express-session": "^1.14.0",
     "form-data": "^1.0.0-rc4",
     "iconv-lite": "^0.4.13",
     "jade": "^1.11.0",
@@ -31,6 +32,8 @@
     "passport": "~0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
+    "php-unserialize": "0.0.1",
+    "redis": "^2.6.2",
     "request": "^2.73.0",
     "serve-favicon": "^2.3.0",
     "xml2js": "^0.4.17"
