--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,9 @@
     "angular-ui-router": "~0.2.15",
     "angular-validation-match": "~1.5.2",
     "angular-animate": "^1.5.7",
-    "angular-scroll": "^1.0.0"
+    "angular-scroll": "^1.0.0",
+    "angular-busy": "^4.1.3",
+    "angular-spinkit": "^0.3.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
