--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "locutus": "^2.0.5",
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
+    "mandrill-api": "^1.0.45",
     "md5": "^2.1.0",
     "method-override": "^2.3.5",
     "moment": "^2.13.0",
