--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-animate": "^1.5.7",
     "angular-scroll": "^1.0.0",
     "angular-busy": "^4.1.3",
-    "angular-spinkit": "^0.3.4"
+    "angular-spinkit": "^0.3.4",
+    "angular-ui-router-title": "^0.0.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
