--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "php-unserialize": "0.0.1",
     "redis": "^2.6.2",
     "request": "^2.73.0",
+    "requestretry": "^1.10.0",
     "serve-favicon": "^2.3.0",
     "xml2js": "^0.4.17"
   },
